--- a/YDAYS_BRANDSBUILDERS/Séance_3/Nekketsu/Scrapping/Scrap-Bagues_Nekketsu.ipynb
+++ b/YDAYS_BRANDSBUILDERS/Séance_3/Nekketsu/Scrapping/Scrap-Bagues_Nekketsu.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Spécifiez le chemin complet vers chromedriver.exe\n",
+    "#chemin complet vers chromedriver.exe\n",
     "path_to_chromedriver = './chromedriver-win32/chromedriver.exe'\n",
     "\n",
     "# Créez une instance de Service en spécifiant le chemin du chromedriver\n",
