--- a/YDAYS_BRANDSBUILDERS/Séance_3/JapanStreet/Scrapping/Scrap-JapanStreet.ipynb
+++ b/YDAYS_BRANDSBUILDERS/Séance_3/JapanStreet/Scrapping/Scrap-JapanStreet.ipynb
@@ -31,12 +31,12 @@
     "driver = webdriver.Chrome(service=chrome_service)\n",
     "\n",
     "# Naviguez vers l'URL souhaitée\n",
-    "driver.get('https://akitoparis.com/collections/vetement-japonais')\n"
+    "driver.get('https://japanstreet.fr/collections/kimono-homme')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,9 +45,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bravo, toutes les données ont été scrappées\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "s = 1 #Initialisation d'une variable i qui sera incrémenter à chaque tour de la boucle afin de modifier les liens et accéder aux différents produits.\n",
     "\n",
