--- a/YDAYS_BRANDSBUILDERS/Séance_3/Nekketsu/Scrapping/Scrap-Chaussettes_Nekketsu.ipynb
+++ b/YDAYS_BRANDSBUILDERS/Séance_3/Nekketsu/Scrapping/Scrap-Chaussettes_Nekketsu.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Import des modules nécessaires à savoir requests pour créer,utiliser et excécuter nos requêtes et selenium comme recommander. \n",
+    "# Import des modules nécessaires à savoir requests pour créer,utiliser et excécuter nos requêtes et selenium comme recommander. \n",
     "import requests\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.service import Service\n",
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chaussettes = [] #Création du tableau où seront stocker les données."
+    "chaussettes = [] # Création du tableau où seront stocker les données."
    ]
   },
   {
@@ -49,10 +49,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = 1 #Initialisation d'une variable i qui sera incrémenter à chaque tour de la boucle afin de modifier les liens et accéder aux différents produits.\n",
+    "t = 1 # Initialisation d'une variable i qui sera incrémenter à chaque tour de la boucle afin de modifier les liens et accéder aux différents produits.\n",
     "\n",
     "time.sleep(5)\n",
-    "for data in range(1,1000):  # limitation des produits à afficher\n",
+    "for data in range(1,1000):  # Limitation des produits à afficher\n",
     "    try:\n",
     "        categorie = driver.find_element(\"xpath\", f'/html/body/div[4]/div/div[2]/div[1]/h1').text \n",
     "        nom = driver.find_element(\"xpath\", f'/html/body/div[4]/div/div[4]/div[1]/div{[t]}/div/a/div/h2 ').text   \n",
@@ -64,7 +64,7 @@
     "        print(prix)\n",
     "        print(image)\n",
     "        \n",
-    "        chaussettes.append([categorie, nom, prix, image])\n",
+    "        chaussettes.append([categorie, nom, prix, image]) # Ajout des elements du tableau final\n",
     "\n",
     "    except:\n",
     "        print(\"Bravo, toutes les données ont été scrappées\")\n",
