--- a/YDAYS_BRANDSBUILDERS/Séance_3/Nekketsu/Scrapping/Scrap-Bagues_Nekketsu.ipynb
+++ b/YDAYS_BRANDSBUILDERS/Séance_3/Nekketsu/Scrapping/Scrap-Bagues_Nekketsu.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Import des modules nécessaires à savoir requests pour créer,utiliser et excécuter nos requêtes et selenium comme recommander. \n",
+    "# Import des modules nécessaires à savoir requests pour créer,utiliser et excécuter nos requêtes et selenium comme recommandé. \n",
     "import requests\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.service import Service\n",
@@ -21,16 +21,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#chemin complet vers chromedriver.exe\n",
+    "# chemin vers chromedriver.exe\n",
     "path_to_chromedriver = './chromedriver-win32/chromedriver.exe'\n",
     "\n",
-    "# Créez une instance de Service en spécifiant le chemin du chromedriver\n",
+    "# Création d'une instance de Service en utilisant le chemin du chromedriver\n",
     "chrome_service = Service(path_to_chromedriver)\n",
     "\n",
-    "# Créez le navigateur en utilisant l'instance de Service\n",
+    "# Création du navigateur en utilisant l'instance de Service\n",
     "driver = webdriver.Chrome(service=chrome_service)\n",
     "\n",
-    "# Naviguez vers l'URL souhaitée\n",
+    "# Naviguation vers l'URL souhaitée\n",
     "driver.get('https://nekketsu.store/collections/bague-japonaise')\n"
    ]
   },
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bagues = [] #Création du tableau où seront stocker les données."
+    "bagues = [] # Création du tableau où seront stocker les données."
    ]
   },
   {
@@ -49,10 +49,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = 1 #Initialisation d'une variable i qui sera incrémenter à chaque tour de la boucle afin de modifier les liens et accéder aux différents produits.\n",
+    "s = 1 # Initialisation d'une variable i qui sera incrémenter à chaque tour de la boucle afin de modifier les liens et accéder aux différents produits.\n",
     "\n",
     "time.sleep(5)\n",
-    "for data in range(1,1000):  # limitation des produits à afficher\n",
+    "for data in range(1,1000):  # Limitation des produits à afficher\n",
     "    try:\n",
     "        categorie = driver.find_element(\"xpath\", f'/html/body/div[4]/div/div[2]/div[1]/h1').text \n",
     "        nom = driver.find_element(\"xpath\", f'/html/body/div[4]/div[3]/div[4]/div[1]/div/div[1]/div{[s]}/div/a/div/h2').text                 \n",
@@ -64,7 +64,7 @@
     "        print(prix)\n",
     "        print(image)\n",
     "        \n",
-    "        bagues.append([categorie, nom, prix, image])\n",
+    "        bagues.append([categorie, nom, prix, image]) # Ajout des elements du tableau final\n",
     "\n",
     "    except:\n",
     "        print(\"Bravo, toutes les données ont été scrappées\")\n",
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Utilisation de join pour séparer par des points-virgules\n",
+    "# Utilisation de join pour séparer les elements par des points-virgules afin pouvoir convertir le fichier en .csv\n",
     "resultat = \";\".join([\";\".join(map(str, element)) for element in bagues])\n",
     "\n",
     "# Affichage du résultat\n",
