--- a/YDAYS_BRANDSBUILDERS/Séance_3/Tenko/Scrapping/Scrap-Tshirts_Tenko.ipynb
+++ b/YDAYS_BRANDSBUILDERS/Séance_3/Tenko/Scrapping/Scrap-Tshirts_Tenko.ipynb
@@ -73,19 +73,19 @@
     "        try: #Essayer de...\n",
     "            #Récupérer les diverses données\n",
     "            categorie = driver.find_element(\"xpath\", f'/html/body/div[2]/div/main/div[1]/div[1]/header/h1').text \n",
-    "            nom = driver.find_element(\"xpath\", f'/html/body/div[2]/div/main/div[2]/div/div/div/div/div[2]/div[1]/div/div[1]/div[2]/div{[i]}/div[1]/div/a/div/div[1]').text            \n",
+    "            produit = driver.find_element(\"xpath\", f'/html/body/div[2]/div/main/div[2]/div/div/div/div/div[2]/div[1]/div/div[1]/div[2]/div{[i]}/div[1]/div/a/div/div[1]').text            \n",
     "            prix = driver.find_element(\"xpath\", f'/html/body/div[2]/div/main/div[2]/div/div/div/div/div[2]/div[1]/div/div[1]/div[2]/div{[i]}/div[1]/div/a/div/div[2]').text \n",
     "            image_element = driver.find_element(\"xpath\", f'/html/body/div[2]/div/main/div[2]/div/div/div/div/div[2]/div[1]/div/div[1]/div[2]/div[{i}]/div[1]/div/div/div/image-element/img')\n",
     "            image_src = image_element.get_attribute('src')\n",
     "            \n",
     "            #Afficher les diverses données\n",
     "            print(categorie)\n",
-    "            print(nom)\n",
+    "            print(produit)\n",
     "            print(prix)\n",
     "            print(image_src)\n",
     "            \n",
     "            #Stocker les diverses données dans la table\n",
-    "            produits.append([categorie, nom, prix, image_src])\n",
+    "            produits.append([categorie, produit, prix, image_src])\n",
     "        \n",
     "        except Exception: #Si l'essaye échoue..\n",
     "            pass #Ne plus rien faire\n",
