--- a/YDAYS_BRANDSBUILDERS/Seance_4/Kidoriman/Scraping/Scrap-Kidoriman.ipynb
+++ b/YDAYS_BRANDSBUILDERS/Seance_4/Kidoriman/Scraping/Scrap-Kidoriman.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17d38b70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +18,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c692b79a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,33 +31,31 @@
     "driver = webdriver.Chrome(service=chrome_service)\n",
     "\n",
     "# Naviguation vers l'URL souhaitée\n",
-    "driver.get('https://anatta.ca/')\n"
+    "driver.get('https://kidoriman.com/')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7349b1a4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Recherche du nombre de page suivante en accédant à la classe \"page\"\n",
-    "page_suivante = driver.find_elements(By.XPATH, \"//div[@class='shopify-section t4s-sp-section-mb-nav']//ul[@class='t4s-mb__menu']//li[@class = 't4s-menu-item t4s-item-level-0']\")\n",
+    "#Recherche du nombre de rubriques de vêtements présentes sur la barre de navigation du site afin de connaître le nombre de pages à scrapper:\n",
+    "rubriques = driver.find_elements(By.XPATH, \"//nav[@class='menu-drawer__navigation']//ul[@class='menu-drawer__menu list-menu']//a[@class='menu-drawer__menu-item list-menu__itemfocus-inset']\")\n",
     "\n",
-    "nb_pages = len(page_suivante) #Nombre d'éléments stocker dans la variable nb_pages\n",
-    "print(\"Nombre de pages dans la catégorie : \" + str(nb_pages)) #Affichage du nombre de pages présentes pour la catégorie séléctionner"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Recherche du nombre de page suivante en accédant à la classe \"page\"\n",
-    "page_suivante = driver.find_elements(By.XPATH, \"//div[@class='pagination']//span[@class='page']\")\n",
+    "nb_pages = len(rubriques) #Nombre de pages stocker dans la variable nb_pages\n",
+    "print(\"Il y'a actuellement \" + str(nb_pages) + \" catégories sur ce site. \\nLes voicis:\") #Affichage du nombre de pages présentes pour la catégorie séléctionner\n",
     "\n",
-    "nb_pages = len(page_suivante) #Nombre d'éléments stocker dans la variable nb_pages\n",
-    "print(\"Nombre de pages dans la catégorie : \" + str(nb_pages + 1)) #Affichage du nombre de pages présentes pour la catégorie séléctionner"
+    "#Nous avons la liste genres qui contiendras les différents genres de rubriques et i qui représente l'indice à incrémenter pour accéder aux diverses éléments de la barre de navigation\n",
+    "genres, i  = [], 1 \n",
+    "for pages in range(nb_pages):\n",
+    "    #Nous avons la variage collections qui correspond aux catégories de rubriques préssentes\n",
+    "    collections = driver.find_element(\"xpath\", f'/html/body/div[1]/div[2]/header-wrapper/header/div[1]/header-drawer/details/div/div/div/nav/ul/li[{i}]/a')\n",
+    "    genre = collections.get_attribute('href') #On recupere le lien des pages que l'ont ajoutes à la catégorie genre\n",
+    "    genres.append(genre)\n",
+    "    i += 1  # Assurez-vous d'incrémenter la valeur de 'i' pour chaque itération\n",
+    "print(genres)\n"
    ]
   },
   {
@@ -77,18 +73,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "j = 2 #Initialisation d'une variable j qui sera incrémenter à chaque tour de la boucle afin de modifier les liens des pages et accéder aux produits.\n",
-    "for page in range(nb_pages+1): #Pour le nombre de pages présentes dans la catégorie\n",
+    "for page in genres: #Pour le nombre de pages présentes dans la catégorie\n",
     "    i = 1 #Initialisation d'une variable i qui sera incrémenter à chaque tour de la boucle afin d'accéder aux diverses produits présents.\n",
-    "    print(\"Page \" + str(j-1) + \":\") #Affichage de la page en cours de scrapping\n",
-    "    time.sleep(3) #Attente de 3 sec permettant le bon chargement de la page\n",
-    "    for data in range(300):  #Limitation des produits à afficher\n",
+    "    driver.get(page)\n",
+    "    # time.sleep(3) #Attente de 3 sec permettant le bon chargement de la page\n",
+    "    for data in range(1500):  #Limitation des produits à afficher\n",
     "        try: #Essayer de...\n",
     "            #Récupérer les diverses données\n",
-    "            categorie = driver.find_element(\"xpath\", f'/html/body/div[2]/div/main/div[1]/div[1]/header/h1').text \n",
-    "            produit = driver.find_element(\"xpath\", f'/html/body/div[2]/div/main/div[2]/div/div/div/div/div[2]/div[1]/div/div[1]/div[2]/div{[i]}/div[1]/div/a/div/div[1]').text            \n",
-    "            prix = driver.find_element(\"xpath\", f'/html/body/div[2]/div/main/div[2]/div/div/div/div/div[2]/div[1]/div/div[1]/div[2]/div{[i]}/div[1]/div/a/div/div[2]').text \n",
-    "            image_element = driver.find_element(\"xpath\", f'/html/body/div[2]/div/main/div[2]/div/div/div/div/div[2]/div[1]/div/div[1]/div[2]/div[{i}]/div[1]/div/div/div/image-element/img')\n",
+    "            categorie = driver.find_element(\"xpath\", f'/html/body/div[2]/div[3]/main/section[1]/div/div/div/div/h1').text \n",
+    "            produit = driver.find_element(\"xpath\", f'/html/body/div[2]/div[3]/main/section[2]/div/div/div[2]/div/ul/li{[i]}/div/div[1]/div[1]/a').text            \n",
+    "            prix = driver.find_element(\"xpath\", f'/html/body/div[2]/div[3]/main/section[2]/div/div/div[2]/div/ul/li{[i]}/div/div[1]/div[1]/div[2]/dl/div[2]/dd[2]/span/price-money/bdi/span').text \n",
+    "            image_element = driver.find_element(\"xpath\", f'/html/body/div[2]/div[3]/main/section[2]/div/div/div[2]/div/ul/li{[i]}/div/use-animate/a/div/img')\n",
     "            image_src = image_element.get_attribute('src')\n",
     "            \n",
     "            #Afficher les diverses données\n",
@@ -101,20 +96,7 @@
     "            produits.append([categorie, produit, prix, image_src])\n",
     "        \n",
     "        except Exception: #Si l'essaye échoue..\n",
-    "            pass #Ne plus rien faire\n",
-    "        #Incrémenter l'indice i de 1 sauf s'il a déja atteint une valeur de 20 (en effet sur ce site une page ne peut contenir que 20 produits)\n",
-    "        i += 1\n",
-    "        if i > 20:\n",
-    "            break  # Sort de la boucle interne si i dépasse 20\n",
-    "    \n",
-    "    \n",
-    "    try: #Essayer de...\n",
-    "        suivant = driver.get(f'https://tenko.fr/collections/chaussettes-japonaises?page={j}') #Passer à la page suivante\n",
-    "    except: #Si cela ne fonctionne pas\n",
-    "        print(\"Toutes les pages ont été scrappé\") #Afficher ceci\n",
-    "        sys.exit() #Et sortir du système de la boucle pour réduire les itérations supplémentaires\n",
-    "    j += 1 #Incrémenter l'indice j pour passer à la page suivante au prochain tour\n",
-    "\n",
+    "            break  \n",
     "\n",
     "print(\"Actuellement, \" + str(len(produits)) + \" données ont pu être récupérées.\")  #Afficher le nombre d'élément présente dans la liste"
    ]
