--- a/YDAYS_BRANDSBUILDERS/Seance_4/Anatta/Scraping/Scrap-Anatta.ipynb
+++ b/YDAYS_BRANDSBUILDERS/Seance_4/Anatta/Scraping/Scrap-Anatta.ipynb
@@ -80,23 +80,25 @@
     "            produit = driver.find_element(\"xpath\", f'/html/body/div[2]/main/section[2]/div/div/div/div/div[1]/div{[i]}/div/div[2]/div/h3/a').text            \n",
     "            prix = driver.find_element(\"xpath\", f'/html/body/div[2]/main/section[2]/div/div/div/div/div[1]/div{[i]}/div/div[2]/div/div[1]').text \n",
     "            \n",
-    "            #time.sleep(3) #Simplement pour l'exécution, permettre un tant de chargement des images afin de les récupérer\n",
     "            image_element = driver.find_element(\"xpath\", f'/html/body/div[2]/main/section[2]/div/div/div/div/div[1]/div{[i]}/div/div[1]/div[1]/img[1]')\n",
     "            image_src = image_element.get_attribute('data-srcset')\n",
-    "            \n",
+    "            image = image_src.split(\",\")[0].strip() #Je ne prend que le premier lien des photos car il y'en a plusieurs pour les différentes dimensions souhaitées\n",
+    "\n",
     "            #Afficher les diverses données\n",
     "            print(produit)\n",
     "            print(prix)\n",
-    "            print(image_src)\n",
+    "            print(image)\n",
     "            \n",
     "            #Stocker les diverses données dans la table\n",
-    "            produits.append([produit, prix, image_src])\n",
+    "            produits.append([produit, prix, image])\n",
     "\n",
     "            #Initialisation du scroll vers le bas à l'aide de la bibliothèque ActionsChains qui simule la touche d'appui vers le bas\n",
     "            actions = ActionChains(driver)\n",
-    "            for scroll in range(5):  #Initialiser le nombre d'appui\n",
+    "            for scroll in range(3):  #Initialiser le nombre d'appui\n",
     "                actions.send_keys(Keys.ARROW_DOWN)  # Utiliser la touche fléchée vers le bas\n",
     "                actions.perform()\n",
+    "                time.sleep(3) #Simplement pour l'exécution, permettre un tant de chargement des images afin de les récupérer\n",
+    "\n",
     "            \n",
     "            try: #Essayer de...\n",
     "                #Fermer la fenetre de publicité si elle active pour pouvoir accéder aux produits\n",
