--- a/EXPLORATION_DE_DONNEES/Projet_Recrutement-Joueur-Foot/Diagrammes/dataviz1.ipynb
+++ b/EXPLORATION_DE_DONNEES/Projet_Recrutement-Joueur-Foot/Diagrammes/dataviz1.ipynb
@@ -20,7 +20,11 @@
     "from matplotlib.colors import Normalize\n",
     "\n",
     "# Importation de la palette de couleurs viridis de Matplotlib\n",
-    "from matplotlib.cm import viridis"
+    "from matplotlib.cm import viridis\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "from matplotlib.cm import get_cmap\n"
    ]
   },
   {
@@ -77,6 +81,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7985b661",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Appel de la fonction \n",
+    "age_moyen_par_poste()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6ac64fd0",
    "metadata": {},
    "outputs": [],
@@ -105,6 +120,17 @@
     "    \n",
     "    # Affichage du graphique\n",
     "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8129382d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Appel de la fonction \n",
+    "evolution_salaire_anciennete()"
    ]
   },
   {
@@ -147,52 +173,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4800198b",
+   "id": "1cee5b7c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Graphique 4 : Corrélation entre Nationalité et Somme des Compétences des Joueurs\n",
-    "\n",
-    "def correlation_nationalite_competences():\n",
-    "    # Liste des compétences utilisées pour le calcul de la somme des compétences\n",
-    "    competences = ['Crossing', 'Finishing', 'HeadingAccuracy', 'ShortPassing', 'Volleys', 'Dribbling',\n",
-    "                   'Curve', 'FKAccuracy', 'LongPassing', 'BallControl', 'Acceleration', 'SprintSpeed',\n",
-    "                   'Agility', 'Reactions', 'Balance', 'ShotPower', 'Jumping', 'Stamina', 'Strength',\n",
-    "                   'LongShots', 'Aggression', 'Interceptions', 'Positioning', 'Vision', 'Penalties',\n",
-    "                   'Composure', 'Marking', 'StandingTackle', 'SlidingTackle']\n",
-    "    \n",
-    "    # Création d'une nouvelle colonne dans le DataSet représentant la somme des compétences pour chaque joueur\n",
-    "    df['TotalCompetences'] = df[competences].sum(axis=1)\n",
-    "    \n",
-    "    # Sélection des 20 nationalités les plus fréquentes dans le DataSet\n",
-    "    top_20_nationalites = df['Nationality'].value_counts().head(20).index\n",
-    "    df_top_20 = df[df['Nationality'].isin(top_20_nationalites)]\n",
-    "    \n",
-    "    # Normalisation des valeurs pour la couleur\n",
-    "    norm = Normalize(vmin=df_top_20['TotalCompetences'].min(), vmax=df_top_20['TotalCompetences'].max())\n",
-    "    \n",
-    "    # Utilisation de la carte de couleurs viridis pour représenter la somme des compétences\n",
-    "    colors = viridis(norm(df_top_20['TotalCompetences']))\n",
-    "    \n",
-    "    # Création de la figure de taille personnalisée\n",
-    "    plt.figure(figsize=(16, 10))\n",
-    "    \n",
-    "    # Traçage d'un nuage de points avec la corrélation entre la nationalité et la somme des compétences\n",
-    "    plt.scatter(df_top_20['Nationality'], df_top_20['TotalCompetences'], alpha=0.5, c=colors, edgecolors='w', linewidth=0.5)\n",
-    "    \n",
-    "    # Ajout des étiquettes et du titre au graphique\n",
-    "    plt.xlabel('Nationalité', fontsize=14)\n",
-    "    plt.ylabel('Somme des Compétences', fontsize=14)\n",
-    "    plt.title('Corrélation entre Nationalité et Somme des Compétences des Joueurs (Top 20 Nationalités)', fontsize=16)\n",
-    "    \n",
-    "    # Personnalisation des étiquettes de l'axe des abscisses (X) en les faisant pivoter de 45 degrés\n",
-    "    plt.xticks(rotation=45, ha='right')\n",
-    "    \n",
-    "    # Ajustement de la disposition du graphique\n",
-    "    plt.tight_layout()\n",
-    "    \n",
-    "    # Affichage du graphique\n",
-    "    plt.show()"
+    "# Appel de la fonction \n",
+    "repartition_pied_prefere()"
    ]
   },
   {
@@ -217,6 +203,17 @@
     "    \n",
     "    # Affichage du graphique\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "681ec6b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Appel de la fonction \n",
+    "repartition_joueurs_par_nationalite()"
    ]
   },
   {
@@ -261,6 +258,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9f9f7e7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Appel de la fonction \n",
+    "classement_joueurs_populaires()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "426143b2",
    "metadata": {},
    "outputs": [],
@@ -295,36 +303,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54db7379",
+   "id": "ebc83e74",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Graphique 8 : Les 11 joueurs les plus légers par pays - Diagramme de Barres Horizontal\n",
-    "\n",
-    "def joueurs_plus_leger_par_pays():\n",
-    "    # Sélection des colonnes pertinentes du DataSet\n",
-    "    df_taille_poids = df[['Nationality', 'Name', 'Height', 'Weight']]\n",
-    "    \n",
-    "    # Tri du DataFrame par nationalité puis par poids\n",
-    "    df_taille_poids = df_taille_poids.sort_values(by=['Nationality', 'Weight'])\n",
-    "    \n",
-    "    # Sélection des 11 joueurs les plus légers par pays\n",
-    "    df_top_leger_par_pays = df_taille_poids.groupby('Nationality').head(11)\n",
-    "    \n",
-    "    # Création d'un diagramme de barres horizontal\n",
-    "    plt.figure(figsize=(12, 25))\n",
-    "    sns.barplot(x='Weight', y='Nationality', data=df_top_leger_par_pays, palette='viridis', ci=None)\n",
-    "    \n",
-    "    # Ajout des étiquettes aux axes et du titre au graphique\n",
-    "    plt.xlabel('Poids (kg)', fontsize=14)\n",
-    "    plt.ylabel('Nationalité', fontsize=14)\n",
-    "    plt.title('Les 11 Joueurs les Plus Légers par Pays - Diagramme de Barres Horizontal', fontsize=16)\n",
-    "    \n",
-    "    # Ajustement de la mise en page\n",
-    "    plt.tight_layout()\n",
-    "    \n",
-    "    # Affichage du graphique\n",
-    "    plt.show()"
+    "# Appel de la fonction \n",
+    "vue_globale_nombre_joueurs_par_poste()"
    ]
   },
   {
@@ -345,33 +329,56 @@
     "    # Calcul des moyennes des compétences par poste\n",
     "    df_comp_par_poste = df.groupby('Position')[competences].mean().reset_index()\n",
     "    \n",
-    "    # Paramètres pour le diagramme en barres groupées\n",
-    "    bar_width = 0.15\n",
-    "    bar_positions = range(len(df_comp_par_poste))\n",
+    "    # Normalisation des valeurs pour le radar (pourcentage)\n",
+    "    norm = Normalize(vmin=0, vmax=100)\n",
     "    \n",
-    "    # Création du graphique\n",
-    "    plt.figure(figsize=(30, 8))\n",
-    "    for i, competence in enumerate(competences):\n",
-    "        plt.bar(\n",
-    "            [pos + i * bar_width for pos in bar_positions],\n",
-    "            df_comp_par_poste[competence],\n",
-    "            width=bar_width,\n",
-    "            label=competence\n",
-    "        )\n",
+    "    # Création du graphique en radar\n",
+    "    plt.figure(figsize=(12, 12))\n",
     "    \n",
-    "    # Ajout des étiquettes aux axes et du titre au graphique\n",
-    "    plt.xlabel('Poste')\n",
-    "    plt.ylabel('Compétences Moyennes')\n",
-    "    plt.title('Compétences Moyennes par Poste - Diagramme en Barres Groupées')\n",
+    "    # Ajout d'un axe polar au graphique\n",
+    "    ax = plt.subplot(111, polar=True)\n",
     "    \n",
-    "    # Personnalisation des marques sur l'axe des x\n",
-    "    plt.xticks([pos + (len(competences) - 1) * bar_width / 2 for pos in bar_positions], df_comp_par_poste['Position'])\n",
+    "    # Nombre de compétences\n",
+    "    num_competences = len(competences)\n",
+    "    \n",
+    "    # Angles pour le radar\n",
+    "    angles = np.linspace(0, 2 * np.pi, num_competences, endpoint=False).tolist()\n",
+    "    angles += angles[:1]  # Fermeture du radar\n",
+    "    \n",
+    "    # Conversion des angles en degrés\n",
+    "    angles_deg = np.degrees(angles)\n",
+    "    \n",
+    "    # Création d'une colormap pour les compétences\n",
+    "    cmap = get_cmap(\"tab20c\")\n",
+    "    \n",
+    "    # Traçage du radar pour chaque poste\n",
+    "    for i, row in df_comp_par_poste.iterrows():\n",
+    "        values = row[competences].tolist()\n",
+    "        values += values[:1]  # Fermeture du polygone\n",
+    "        color = cmap(i / len(df_comp_par_poste))\n",
+    "        ax.plot(angles, values, color=color, linewidth=2, linestyle='solid', label=row['Position'])\n",
+    "    \n",
+    "    # Ajout des étiquettes pour chaque compétence\n",
+    "    ax.set_thetagrids(angles_deg[:-1], competences)\n",
     "    \n",
     "    # Ajout de la légende\n",
-    "    plt.legend()\n",
+    "    plt.legend(title='Poste', bbox_to_anchor=(0.5, -0.1), loc='upper center')\n",
+    "    \n",
+    "    # Ajout du titre au graphique\n",
+    "    plt.title('Compétences Moyennes par Poste - Diagramme en Radar', fontsize=16)\n",
     "    \n",
     "    # Affichage du graphique\n",
     "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Appel de la fonction \n",
+    "competences_moyennes_par_poste()"
    ]
   },
   {
@@ -417,16 +424,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Appeler les fonctions restantes dans l'ordre souhaité\n",
-    "age_moyen_par_poste()\n",
-    "evolution_salaire_anciennete()\n",
-    "repartition_pied_prefere()\n",
-    "correlation_nationalite_competences()\n",
-    "repartition_joueurs_par_nationalite()\n",
-    "classement_joueurs_populaires()\n",
-    "vue_globale_nombre_joueurs_par_poste()\n",
-    "joueurs_plus_leger_par_pays()\n",
-    "competences_moyennes_par_poste()\n",
+    "# Appel de la fonction \n",
     "top_buteurs()"
    ]
   }
