--- a/EXPLORATION_DE_DONNEES/Projet_Recrutement-Joueur-Foot/Diagrammes/dataviz2.ipynb
+++ b/EXPLORATION_DE_DONNEES/Projet_Recrutement-Joueur-Foot/Diagrammes/dataviz2.ipynb
@@ -303,24 +303,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calcul de la moyenne pour chaque catégorie et ajout des colonnes au DataFrame\n",
+    "# Calcul de la moyenne pour chaque catégorie et ajout des colonnes au DataSet\n",
     "for categorie, competences in categories_evaluations.items():\n",
     "    dataset[f\"Moyenne_{categorie}\"] = dataset[competences].mean(axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf8bc9bb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Appels aux fonctions radar et distribution_competences_groupees\n",
-    "radar(label=\"Winger\", moyenne_geree=moyenne_competences_groupees(GroupPositions=\"Winger\"), couleur=\"red\")\n",
-    "radar(label=\"Defender\", moyenne_geree=moyenne_competences_groupees(GroupPositions=\"Defender\"), couleur=\"purple\")\n",
-    "radar(label=\"Striker\", moyenne_geree=moyenne_competences_groupees(GroupPositions=\"Striker\"), couleur=\"green\")\n",
-    "radar(label=\"Defensive Midfielder\", moyenne_geree=moyenne_competences_groupees(GroupPositions=\"Defensive Midfielder\"), couleur=\"blue\")\n",
-    "radar(label=\"Midfielder\", moyenne_geree=moyenne_competences_groupees(GroupPositions=\"Midfielder\"), couleur=\"black\")"
    ]
   },
   {
